Update @studyathome-internationally/vuepress-theme-hub: refactor enrollment query parameter handling to avoid scrolling to top, separate Disclaimer and Confirmation in separate components, wrap input checkbox in div for iphone

--- a/packages/@studyathome-internationally/vuepress-theme-hub/styles/course.styl
+++ b/packages/@studyathome-internationally/vuepress-theme-hub/styles/course.styl
@@ -39,21 +39,18 @@ h1, h2, h3, h4, h5, h6
         text-align justify
       div
         flex 1 1 50%
-      
-      .media
-        &:not(.figure)
-          .container
-            // padding unset !important
-            position relative
-            width 100%
-            height 0
-            padding-bottom 56.27198%
-
-        &.figure
-          margin auto
-            img
-              max-height 500px
-              object-fit contain
+      .media:not(.figure)
+        .container
+          // padding unset !important
+          position relative
+          width 100%
+          height 0
+          padding-bottom 56.27198%
+      .media.figure
+        margin auto
+        img
+          max-height 500px
+          object-fit contain
 
       .information
         padding 0
@@ -152,8 +149,7 @@ h1, h2, h3, h4, h5, h6
             .player
               width inherit 
               height inherit
-            
-      
+
       .contents
         flex-flow column nowrap
 
